--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "psr-4": { "Omnipay\\Stripe\\" : "src/" }
     },
     "require": {
-        "omnipay/common": "~2.0"
+        "omnipay/common": "dev-future"
     },
     "require-dev": {
         "omnipay/tests": "~2.0"
