update common and tests version

--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     },
     "require": {
 	    "php": "^7",
-        "omnipay/common": "dev-master"
+        "omnipay/common": "^3"
     },
     "require-dev": {
-        "omnipay/tests": "dev-master"
+        "omnipay/tests": "^3"
     },
     "extra": {
         "branch-alias": {
