--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,29 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
+  - 7.2
 
-before_script:
-  - composer install -n --dev --prefer-source
+# This triggers builds to run on the new TravisCI infrastructure.
+# See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
+sudo: false
+
+## Cache composer
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+env:
+  global:
+    - setup=basic
+
+matrix:
+  include:
+    - php: 7.1
+      env: setup=lowest
+
+install:
+  - if [[ $setup = 'basic' ]]; then travis_retry composer install --prefer-dist --no-interaction; fi
+  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable; fi
 
 script: vendor/bin/phpcs --standard=PSR2 src && vendor/bin/phpunit --coverage-text
