--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
         "psr-4": { "Omnipay\\Stripe\\" : "src/" }
     },
     "require": {
-	    "php": "^7",
+	    "php": "^7.1",
         "omnipay/common": "^3"
     },
     "require-dev": {
-        "omnipay/tests": "^3"
+        "omnipay/tests": "^3",
+        "squizlabs/php_codesniffer": "^3",
+        "phpro/grumphp": "^0.14"
     },
     "extra": {
         "branch-alias": {
