Revert "Update composer.json"
This reverts commit 705a85edc633fd4c03f4d27b9318e41f1dabc2a3.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "enessacid-buker/stripe",
+    "name": "omnipay/stripe",
     "type": "library",
     "description": "Stripe driver for the Omnipay payment processing library",
     "keywords": [
